fix: fix styles in dark mode

--- a/src/dx_intl/components/PlayerScoreTable.module.css
+++ b/src/dx_intl/components/PlayerScoreTable.module.css
@@ -11,7 +11,7 @@
 }
 
 .table .rating-used td {
-  background: var(--stone-0);
+  background: var(--surface-1);
 }
 
 .table :global(.col-title) {
