--- a/src/dx_intl/pages/Player.module.css
+++ b/src/dx_intl/pages/Player.module.css
@@ -113,7 +113,7 @@
   text-align: center;
   font-size: 0.9rem;
   div {
-    background: var(--stone-0);
+    background: var(--surface-1);
     padding: 0.4em;
     span {
       display: block;
